[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fontes/joystix monospace.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="GameOver" type="Node"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label_gameover" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_top = 46.0
margin_right = 60.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER!!"

[node name="Label_pontuacao" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.0
margin_top = 105.0
margin_right = 199.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "SUA PONTUAÇÃO FOI DE X PONTOS"

[node name="Button_retry" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.0
margin_top = -122.0
margin_right = 46.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 3 )
text = "RETRY"

[node name="Button_menu" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -83.0
margin_right = 45.0
margin_bottom = -57.0
custom_fonts/font = SubResource( 4 )
text = "MENU"

[connection signal="pressed" from="Control/Button_retry" to="." method="_on_Button_retry_pressed"]
[connection signal="pressed" from="Control/Button_menu" to="." method="_on_Button_menu_pressed"]
